fix whovian height on mobile

--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -9,7 +9,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	min-height: 100%;
+	min-height: 300px;
 }
 
 #testimonials .whovian-content .beating-hearts {
